--- a/administracao/templates/administracao/fechar_conexoes.html
+++ b/administracao/templates/administracao/fechar_conexoes.html
@@ -12,7 +12,7 @@
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
 
   <style>
     .projeto_sel {
