--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -26,7 +26,7 @@
     }
   </style>
 
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
