--- a/documentos/templates/documentos/tabela_seguros.html
+++ b/documentos/templates/documentos/tabela_seguros.html
@@ -8,7 +8,7 @@
 {% block head %}
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/tab_simples.css' %}">
-  <script src="{% static 'js/w3.js' %}"></script>
+  <script src="{% static 'js/sort.js' %}"></script>
   <script>{% include "tooltip.js" %}</script>
 {% endblock %}
 
@@ -20,7 +20,7 @@
     <table id="SegurosTable" class="table-bordered table-sm">
       <thead class="table-info">
         <tr>
-          <th onclick="w3.sortHTML('#SegurosTable', '.item', 'td:nth-child(1)')">Data</th>
+          <th onclick="sort('#SegurosTable', '.item', 'td:nth-child(1)')">Data</th>
           <th>Documento</th>
         </tr>
       </thead>
