--- a/academica/templates/academica/exames_pesos.html
+++ b/academica/templates/academica/exames_pesos.html
@@ -9,7 +9,7 @@
   {% load static %}
   {% load l10n %}
   <script>{% include "tooltip.js" %}</script>
-  <script src="{% static 'js/w3.js' %}"></script>
+  <script src="{% static 'js/sort.js' %}"></script>
 
   <style>
     th {
@@ -39,7 +39,7 @@
 
     <table id="ExamesPesosTable">
       <thead class="table-info"><tr>
-        <th onclick="w3.sortHTML('#ExamesPesosTable', '.item', 'td:nth-child(1)')">Semestre</th>
+        <th onclick="sort('#ExamesPesosTable', '.item', 'td:nth-child(1)')">Semestre</th>
         <th>Exames</th>
         <th style="display: none;">Peso</th>
       </tr></thead>
