--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -8,7 +8,7 @@
 {% block head %}
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/tab_simples.css' %}">
-  <script src="{% static 'js/w3.js' %}"></script>
+  <script src="{% static 'js/sort.js' %}"></script>
   <script>{% include "tooltip.js" %}</script>
 
   <style>
@@ -76,7 +76,7 @@
   <div id="atualizar">
 
     <script>
-        var cursos_organizacoes = {};
+      var cursos_organizacoes = {};
     </script>
 
     <div class="table-responsive">
@@ -84,15 +84,15 @@
         <thead class="table-info">
           <tr>
             <th>#</th>
-            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')">Organização</th>
-            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" width="48em">Área</th>
-            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" width="85em">Interesse</th>
-            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" width="78em"><small class="tit_peq">Último<br>Contato</small></th>
-            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(6)')">Anotação</th>
-            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(7)')" width="81em">
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(2)')">Organização</th>
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(3)')" width="48em">Área</th>
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(4)')" width="85em">Interesse</th>
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(5)', 'd')" width="78em"><small class="tit_peq">Último<br>Contato</small></th>
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(6)')">Anotação</th>
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(7)', 'n')" width="81em">
               <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Disponíveis</small>
             </th>
-            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(8)')" width="81em">
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(8)', 'n')" width="81em">
               <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas submetidas pela organização, mesmo aquelas que não estão disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Enviadas</small>
             </th>
           </tr>
@@ -205,12 +205,12 @@
 
             {% comment %} Propostas Disponíveis {% endcomment %}
             <td class="text-center">
-              {{disponiveis|stringformat:"03d"}}
+              {{disponiveis}}
             </td>
 
             {% comment %} Propostas Enviadas {% endcomment %}
             <td class="text-center">
-              {{submetidas|stringformat:"03d"}}
+              {{submetidas}}
             </td>
 
           </tr>
