--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}
-  <script src="{% static 'js/w3.js' %}"></script>
+  <script src="{% static 'js/sort.js' %}"></script>
   <script>{% include "tooltip.js" %}</script>
   <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
   <style>
@@ -58,15 +58,15 @@
               <th colspan="3" class="text-center"><b>Bancas</b></th>
             </tr>
             <tr>
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')">Projeto</th>
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')">Período</th>
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')">Orientador</th>
-              {% comment %} <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Preliminar">Prel.</th> {% endcomment %}
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Intermediário">Inter.</th>
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Final">Final</th>
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inter.</th>
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(7)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
-              <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(8)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(1)')">Projeto</th>
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(2)')">Período</th>
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(3)')">Orientador</th>
+              {% comment %} <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(5)')" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Preliminar">Prel.</th> {% endcomment %}
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(4)')" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Intermediário">Inter.</th>
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(5)')" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Final">Final</th>
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(6)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inter.</th>
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(7)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
+              <th onclick="sort('#ProjetosTable', '.item', 'td:nth-child(8)')" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
             </tr>      
           </thead>
 
