--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -10,7 +10,7 @@
   {% load static %}
   {% load addstr %}
   
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
   <script>{% include "tooltip.js" %}</script>
