--- a/projetos/templates/projetos/evolucao_objetivos.html
+++ b/projetos/templates/projetos/evolucao_objetivos.html
@@ -11,7 +11,7 @@
   {% load addstr %}
   {% load l10n %}
 
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-annotation.min.js' %}"></script>
