--- a/projetos/templates/projetos/lista_feedback.html
+++ b/projetos/templates/projetos/lista_feedback.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}
-  <script src="{% static 'js/w3.js' %}"></script>
+  <script src="{% static 'js/sort.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
 {% endblock %}
 
@@ -22,11 +22,11 @@
       <thead class="table-info">
         <tr>
           <th>ver</th>
-          <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Nome</th>
+          <th onclick="sort('#FeedbacksTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Nome</th>
           <th style="cursor:pointer" class="text-center">e-mail</th>
-          <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
-          <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Data</th>
-          <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center">NPS</th>
+          <th onclick="sort('#FeedbacksTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
+          <th onclick="sort('#FeedbacksTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Data</th>
+          <th onclick="sort('#FeedbacksTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center">NPS</th>
         </tr>
       </thead>
       <tbody>
