--- a/projetos/templates/projetos/lista_feedback_estudantes.html
+++ b/projetos/templates/projetos/lista_feedback_estudantes.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}  
-  <script src="{% static 'js/w3.js' %}"></script>
+  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-labels.js' %}"></script>
   <script>{% include "tooltip.js" %}</script>
