--- a/templates/relatos.html
+++ b/templates/relatos.html
@@ -10,7 +10,7 @@
 
 {% if projeto %}
   <table class="tabela_redu_estu table-striped"><tbody>
-  {% for evento, relatos, avaliados in projeto.get_relatos %}
+  {% for evento, relatos, avaliados, observacoes in projeto.get_relatos %}
     <tr style="padding-left: 18px;">
         <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}" {% if evento.em_prazo %}style="color: lightgray;"{% endif %}>{{ forloop.counter }}&ordm;</a></td>
         <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}" {% if evento.em_prazo %}style="color: lightgray;"{% endif %}>
@@ -39,6 +39,9 @@
                     {% endif %}
                   </script>
                 {% endfor %}
+                {% if observacoes %}
+                  <span data-toggle="tooltip" data-html="true" animation="true" title="{{ observacoes.observacoes_orientador}}">&#x1F4AC;</span>
+                {% endif %}
             {% else %}
                 <span style="color:brown">Aguardando avaliação do orientador</span>
             {% endif %}
