--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -152,6 +152,8 @@
                 "background-color:aquamarine" {% comment %} (6, 'Contrato fechado para projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 7 %}
                 "background-color:lightyellow" {% comment %} (7, 'Envio de Relatório Final'), {% endcomment %}
+              {% else %}
+                "background-color:white"
               {% endif %}
               data-type="{{contato.tipo_de_retorno}}"
           {% endif %}
@@ -271,14 +273,12 @@
               </script>
             {% comment %} {% endif %} {% endcomment %}
           {% endif %}
-
-            </tbody>
-
         {% empty %}
           <tr>
             <td colspan="7" class="text-center">Nenhuma organização cadastrada.</td>
           </tr>
         {% endfor %}
+        </tbody>
       </table>
       </div>
 
@@ -295,27 +295,30 @@
           <div style="display: inline-block; border: 1px solid black; margin-top: 16px; padding: 10px;">
             <b>Organizações contactadas recentemente ({{total_organizacoes}}):</b><br>
         
-            &nbsp;<span data-type="0" data-color="lightblue" class="show-hide" style="background-color:lightblue">&nbsp;&nbsp;&nbsp;</span> Sondada <span id="so_contactados"></span><br>
-            &nbsp;<span data-type="1" data-color="lemonchiffon" class="show-hide" style="background-color:lemonchiffon">&nbsp;&nbsp;&nbsp;</span> Interessada <span id="interessados"></span><br>
-            &nbsp;<span data-type="2" data-color="lightgreen" class="show-hide" style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;</span> Confirmada <span id="confirmados"></span><br>
-            &nbsp;<span data-type="3" data-color="pink" class="show-hide" style="background-color:pink">&nbsp;&nbsp;&nbsp;</span> Declinou <span id="recusados"></span><br>
+            &nbsp;<span data-type="0" data-color="lightblue" class="show-hide" style="background-color:lightblue;">&nbsp;&nbsp;&nbsp;</span> Sondada <span id="so_contactados"></span><br>
+            &nbsp;<span data-type="1" data-color="lemonchiffon" class="show-hide" style="background-color:lemonchiffon;">&nbsp;&nbsp;&nbsp;</span> Interessada <span id="interessados"></span><br>
+            &nbsp;<span data-type="2" data-color="lightgreen" class="show-hide" style="background-color:lightgreen;">&nbsp;&nbsp;&nbsp;</span> Confirmada <span id="confirmados"></span><br>
+            &nbsp;<span data-type="3" data-color="pink" class="show-hide" style="background-color:pink;">&nbsp;&nbsp;&nbsp;</span> Declinou <span id="recusados"></span><br>
 
-            &nbsp;<span data-type="4" data-color="yellow" class="show-hide" style="background-color:yellow">&nbsp;&nbsp;&nbsp;</span> Notificada de Grupo Fechado <span id="notificada"></span><br>
-            &nbsp;<span data-type="6" data-color="green" class="show-hide" style="background-color:aquamarine">&nbsp;&nbsp;&nbsp;</span> Contrato Fechado para Projeto <span id="documentada"></span><br>
-            &nbsp;<span data-type="5" data-color="#e289df" class="show-hide" style="background-color:#e289df">&nbsp;&nbsp;&nbsp;</span> Avisada que não fechou grupo <span id="sem_grupo"></span><br>
+            &nbsp;<span data-type="4" data-color="yellow" class="show-hide" style="background-color:yellow;">&nbsp;&nbsp;&nbsp;</span> Notificada de Grupo Fechado <span id="notificada"></span><br>
+            &nbsp;<span data-type="6" data-color="green" class="show-hide" style="background-color:aquamarine;">&nbsp;&nbsp;&nbsp;</span> Contrato Fechado para Projeto <span id="documentada"></span><br>
+            &nbsp;<span data-type="5" data-color="#e289df" class="show-hide" style="background-color:#e289df;">&nbsp;&nbsp;&nbsp;</span> Avisada que não fechou grupo <span id="sem_grupo"></span><br>
+            &nbsp;<span data-type="254" data-color="#FFFFFF" class="show-hide" style="border: 1px solid black; background-color:#FFFFFF;">&nbsp;&nbsp;&nbsp;</span> Outros <span id="outros"></span><br>
           </div>
           <script>
 
             $(".show-hide").click(function() {
-
+              
               click = $(this);
               var filterValue = click.attr("data-type");
 
               var row = $(".item");
-
+              
               row.each(function(i, el) {
-            
+                //console.log(filterValue);
+                console.log($(el).attr("data-type"));
                 if( filterValue == $(el).attr("data-type") ) {
+                  console.log($(el).attr("data-type"));
                   if($(el).is(":visible")) {
                     $(el).hide();
                     click.css({background: "linear-gradient(to left top, transparent 47.75%, currentColor 49.5%, currentColor 50.5%, transparent 52.25%)"});
