mostrando também vagas ainda não disponibilizadas

--- a/projetos/templates/projetos/meuprojeto_estudantes.html
+++ b/projetos/templates/projetos/meuprojeto_estudantes.html
@@ -13,12 +13,12 @@
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <style>
     hr.style-five {
-        border: 0;
-        height: 0;
-        box-shadow: 0 0 10px 1px black;
+      border: 0;
+      height: 0;
+      box-shadow: 0 0 10px 1px black;
     }
-    hr.style-five:after {  /* Not really supposed to work, but does */
-        content: "\00a0";  /* Prevent margin collapse */
+    hr.style-five:after {
+      content: "\00a0";
     }
   </style>
 {% endblock %}
