--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -54,6 +54,7 @@
     <li><a href="{% url 'organizacoes_tabela' %}">Organizações</a></li>
     <li><a href="{% url 'bancas_tabela' %}">Bancas</a> <a href="{% url 'bancas_tabela_completa' %}">(completa)</a></li>
     <li><a href="{% url 'aulas_tabela' %}">Aulas</a></li>
+    <li><a href="{% url 'mentorias_tabela' %}">Mentorias</a></li>
   </ul>
 
   <hr>
