mostrando mentorias em professores

--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}
-  {% load certificado_banca %}
+  {% load certificados %}
   <script>{% include "tooltip.js" %}</script>
   
 
