--- a/professores/templates/professores/bancas_alocadas.html
+++ b/professores/templates/professores/bancas_alocadas.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}
-  {% load certificado_banca %}
+  {% load certificados %}
   <script>{% include "tooltip.js" %}</script>
 
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
