--- a/professores/templates/professores/planos_de_orientacao.html
+++ b/professores/templates/professores/planos_de_orientacao.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}
-  {% load certificado_banca %}
+  {% load certificados %}
   {% load tipo_documento %}
 
   <script>{% include "tooltip.js" %}</script>
