--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load static %}
-  {% load certificado_banca %}
+  {% load certificados %}
 
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
