--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -32,6 +32,7 @@
   <hr>
   <h5>Listagem completa</h5>
   <ul>
+    <li><a href="{% url 'todos_usuarios' %}">Usuários</a></li>
     <li><a href="{% url 'estudantes_lista' %}">Estudantes</a></li>
     <li><a href="{% url 'todos_parceiros' %}">Parceiros</a></li>
     <li><a href="{% url 'todos_professores' %}">Professores</a></li>
