--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -145,7 +145,9 @@
           <tr id="tr{{organizacao.id}}" class="item" 
           {% if contato %}
               style=
-              {% if contato.tipo_de_retorno == 0 %}
+              {% if contato.tipo_de_retorno < 2 and submetidas > 0 %}
+                "background-color:lightgreen" {% comment %} (2, 'Enviou proposta de projeto'), {% endcomment %}
+              {% elif contato.tipo_de_retorno == 0 %}
                 "background-color:lightblue" {% comment %} (0, 'Contactada para enviar proposta'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 1 %}
                 "background-color:lemonchiffon" {% comment %} (1, 'Interessada em enviar proposta'), {% endcomment %}
@@ -164,7 +166,7 @@
               {% else %}
                 "background-color:white"
               {% endif %}
-              data-type="{{contato.tipo_de_retorno}}"
+              data-type="{% if contato.tipo_de_retorno < 2 and submetidas > 0 %}2{% else %}{{contato.tipo_de_retorno}}{% endif %}"
           {% endif %}
           >
           <td style="text-align: center; font-size: 12px;"></td>
@@ -264,22 +266,34 @@
             {% comment %} {% if contato.momento|date:"Ymd" > meses3|date:"Ymd" %} {% endcomment %}
               <script>
                 {% with area_cursos=organizacao.area_curso.all%}
+                
                 tipo = "{% for curso in area_cursos %}{% if not forloop.first %}/{% endif %}{{curso.sigla_curta}}{% endfor %}";
-                if (!("{{contato.tipo_de_retorno}}" in cursos_organizacoes)) {cursos_organizacoes["{{contato.tipo_de_retorno}}"] = {};}
-                cursos_organizacoes["{{contato.tipo_de_retorno}}"][tipo] = (cursos_organizacoes["{{contato.tipo_de_retorno}}"][tipo] || 0) + 1;
+                {% if contato.tipo_de_retorno < 2 and submetidas > 0 %} {% comment %} Coloca como se enviou proposta de projeto {% endcomment %}
+                  if (!("2" in cursos_organizacoes)) {cursos_organizacoes["2"] = {};}
+                  cursos_organizacoes["2"][tipo] = 
+                    (cursos_organizacoes["2"][tipo] || 0) + 1;
+                {% else %}
+                  if (!("{{contato.tipo_de_retorno}}" in cursos_organizacoes)) {cursos_organizacoes["{{contato.tipo_de_retorno}}"] = {};}
+                  cursos_organizacoes["{{contato.tipo_de_retorno}}"][tipo] = 
+                    (cursos_organizacoes["{{contato.tipo_de_retorno}}"][tipo] || 0) + 1;
+                {% endif %}
                 
                 {% for curso in area_cursos %}
-                  cursos_projetos["{{curso.sigla_curta}}"] += {{submetidas}}.0/{{area_cursos.count}}.0;
-                  orgs_confirmadas["{{curso.sigla_curta}}"].push("- {{organizacao.nome}}");
-                  {% if contato.tipo_de_retorno == 0 %} {% comment %} (0, 'Contactada para enviar proposta'), {% endcomment %}
+                  {% if contato.tipo_de_retorno == 2 or submetidas > 0 %} {% comment %} (2, 'Enviou proposta de projeto'), {% endcomment %}
+                    cursos_projetos["{{curso.sigla_curta}}"] += {{submetidas}}.0/{{area_cursos.count}}.0;
+                    orgs_confirmadas["{{curso.sigla_curta}}"].push("- {{organizacao.nome}} X {{submetidas}}");
+                  {% elif contato.tipo_de_retorno == 0 %} {% comment %} (0, 'Contactada para enviar proposta'), {% endcomment %}
                     sondados["{{curso.sigla_curta}}"] += 1.0/{{area_cursos.count}}.0;
                     org_sondados["{{curso.sigla_curta}}"].push("- {{organizacao.nome}}");
-                  {% endif %}
-                  {% if contato.tipo_de_retorno == 1 %} {% comment %} (2, 'Interessada em enviar proposta'), {% endcomment %}
+                  {% elif contato.tipo_de_retorno == 1 %} {% comment %} (2, 'Interessada em enviar proposta'), {% endcomment %}
                     interessados["{{curso.sigla_curta}}"] += 1.0/{{area_cursos.count}}.0;
                     orgs_interessados["{{curso.sigla_curta}}"].push("- {{organizacao.nome}}");
                   {% endif %}
+                  
                 {% endfor %}
+
+                
+
 
                 {% endwith %}
               </script>
